--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h2>Details</h2>
+<h2>Online Cab Booking</h2>
 <a href="login.html" target="blank">LoginPage</a>
 
 
